--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Help Give Help</title>
-    <link rel="stylesheet" href="../../public/stylesheets/style.css"
-</head>
+    <link rel="stylesheet" href="../../public/stylesheets/style.css" </head>
 
 <body>
     <!-- navigation bar -->
@@ -35,7 +35,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <div>
             <h1>Get Help Give Help</h1>
@@ -47,5 +47,30 @@
             <button>ask for help</button>
         </div>
     </main>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyD4a1zBHTz5WCT__Y7IaGvMFKlS03nknJI",
+            authDomain: "get-help-give-help-3fc47.firebaseapp.com",
+            projectId: "get-help-give-help-3fc47",
+            storageBucket: "get-help-give-help-3fc47.appspot.com",
+            messagingSenderId: "83016709803",
+            appId: "1:83016709803:web:8d79f75beb5c5f006769ee",
+            measurementId: "G-27VGBMGRRV"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
 </body>
+
 </html>
