--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Help Give Help</title>
-    <link rel="stylesheet" href="../../public/stylesheets/style.css" </head>
+    <link rel="stylesheet" href="/stylesheets/style.css" </head>
 
 <body>
     <!-- navigation bar -->
