--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,52 @@
-<div>You are on the homepage</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Get Help Give Help</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body id='landingbody'>
+    <!-- navigation bar -->
+    <header>
+        <nav class="topnav" id="myTopnav">
+            <ul>
+                <li>
+                    <a>Home</a>
+                </li>
+                <li>
+                    <a>Give Help Board</a>
+                </li>
+                <li>
+                    <a id="getnav">Get Help Board</a>
+                </li>
+                <li id="login-logout">
+                    <!-- will have handlebar logic to handle sessions -->
+                    <!-- {{#if loggedIn}} -->
+                    <button class="btn btn-light">logout</button>
+                    <!-- {{else}} -->
+                    <a>sign up or log in</a>
+                    <!-- {{/if}} -->
+                </li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <div>
+            <h1>Get Help Give Help</h1>
+        </div>
+        <div class="alignbtns">
+            <div>
+                <button type="button" class="btn btn-light btn-lg"  id="givebtn">give help</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-dark btn-lg" id="getbtn">get help</button>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
