use handlebars to template the body of the different pages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 /* landing page and global styles */
+/* class = . id = # */
 
-#landingbody {
+body {
     background-image: url('./images/yinyanghor.png');
     background-repeat: no-repeat;
     background-position-y: -75px;
