--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,48 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Help Give Help</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    {{#if homePageStyleSheet}}
+    <link rel="stylesheet" href="/stylesheets/{{homePageStyleSheet}}.css">
+    {{/if}}
+    {{#if giveBoardStyleSheet}}
+    <link rel="stylesheet" href="/stylesheets/{{giveBoardStyleSheet}}.css"
+    {{/if}}
+    
 </head>
 
-<body id='landingbody'>
-    <!-- navigation bar -->
-    <header>
-        <nav class="topnav" id="myTopnav">
-            <ul>
-                <li>
-                    <a>Home</a>
-                </li>
-                <li>
-                    <a>Give Help Board</a>
-                </li>
-                <li>
-                    <a id="getnav">Get Help Board</a>
-                </li>
-                <li id="login-logout">
-                    <!-- will have handlebar logic to handle sessions -->
-                    <!-- {{#if loggedIn}} -->
-                    <button class="btn btn-light">logout</button>
-                    <!-- {{else}} -->
-                    <a>sign up or log in</a>
-                    <!-- {{/if}} -->
-                </li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <div>
-            <h1>Get Help Give Help</h1>
-        </div>
-        <div class="alignbtns">
-            <div>
-                <button type="button" class="btn btn-light btn-lg"  id="givebtn">give help</button>
-            </div>
-            <div>
-                <button type="button" class="btn btn-dark btn-lg" id="getbtn">get help</button>
-            </div>
-        </div>
-    </main>
+<body>
+    <div>{{{body}}}</div>
 </body>
 </html>
     
