--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Help Give Help</title>
+    <link rel="icon" type="image" href="/stylesheets/images/yinyanghor.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     {{#if homePageStyleSheet}}
     <link rel="stylesheet" href="/stylesheets/{{homePageStyleSheet}}.css">
     {{/if}}
     {{#if giveBoardStyleSheet}}
-    <link rel="stylesheet" href="/stylesheets/{{giveBoardStyleSheet}}.css"
+    <link rel="stylesheet" href="/stylesheets/{{giveBoardStyleSheet}}.css">
+    {{/if}}
+    {{#if getBoardStyleSheet}}
+    <link rel="stylesheet" href="/stylesheets/{{getBoardStyleSheet}}.css">
     {{/if}}
     
 </head>
