--- a/views/getboard.handlebars
+++ b/views/getboard.handlebars
@@ -3,13 +3,13 @@
     <nav>
         <ul>
             <li>
-                <a>Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a>Give Help Board</a>
+                <a href="/giveboard">Give Help Board</a>
             </li>
             <li>
-                <a><u>Get Help Board</u></a>
+                <a href="/getboard"><u>Get Help Board</u></a>
             </li>
             <li id="login-logout">
                 <!-- will have handlebar logic to handle sessions -->
