--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -4,13 +4,13 @@
     <nav>
         <ul>
             <li>
-                <a>Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a id="giveboardnav"><u>Give Help Board</u></a>
+                <a href="/giveboard" id="giveboardnav"><u>Give Help Board</u></a>
             </li>
             <li>
-                <a id="getnav">Get Help Board</a>
+                <a href="/getboard" id="getnav">Get Help Board</a>
             </li>
             <li id="login-logout">
                 <!-- will have handlebar logic to handle sessions -->
