--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,13 +2,13 @@
         <nav class="topnav" id="myTopnav">
             <ul>
                 <li>
-                    <a>Home</a>
+                    <a><u>Home</u></a>
                 </li>
                 <li>
-                    <a>Give Help Board</a>
+                    <a href="/giveboard" id="givenav">Give Help Board</a>
                 </li>
                 <li>
-                    <a id="getnav">Get Help Board</a>
+                    <a href="/getboard" id="getnav">Get Help Board</a>
                 </li>
                 <li id="login-logout">
                     <!-- will have handlebar logic to handle sessions -->
@@ -28,10 +28,10 @@
         </div>
         <div class="alignbtns">
             <div>
-                <button type="button" class="btn btn-light btn-lg"  id="givebtn">give help</button>
+                <a type="button" class="btn btn-light btn-lg"  id="givebtn" href="/giveboard">give help</a>
             </div>
             <div>
-                <button type="button" class="btn btn-dark btn-lg" id="getbtn">get help</button>
+                <a type="button" class="btn btn-dark btn-lg" id="getbtn" href="/getboard">get help</a>
             </div>
         </div>
     </main>
