--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button onClick="login()" type="submit">login</button>
   </div>
 </form>
 </div>
@@ -19,8 +19,12 @@
 <h2> Sign Up Form </h2>
 <form class="signup-form">
   <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
+    <label for="username-signup">firstname:</label>
+    <input type="text" id="fistname-signup" />
+  </div>
+  <div>
+    <label for="username-signup">lastname:</label>
+    <input type="text" id="lastname-signup" />
   </div>
   <div>
     <label for="email-signup">email:</label>
@@ -31,7 +35,7 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
-    <button type="submit">signup</button>
+    <button onClick="signup()" type="submit">signup</button>
   </div>
 </form></h2>
 </div>
