add login route to navigation on all pages and add basic css to login

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,3 +90,8 @@ header nav {
         #login-logout {
             padding-left: 400px;
         }
+        
+        #navlogin {
+            text-decoration: none;
+            color: white;
+        }
