--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -17,7 +17,7 @@
                 <!-- {{#if loggedIn}} -->
                 <!-- <button class="btn btn-light">logout</button> -->
                 <!-- {{else}} -->
-                <a>sign up or log in</a>
+                <a href="/login">sign up or log in</a>
                 <!-- {{/if}} -->
             </li>
         </ul>
