--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
                     <!-- {{#if loggedIn}} -->
                     <button class="btn btn-light">logout</button>
                     <!-- {{else}} -->
-                    <a>sign up or log in</a>
+                    <a href="/login" id="navlogin">sign up or log in</a>
                     <!-- {{/if}} -->
                 </li>
             </ul>
