--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,11 +16,23 @@
     {{#if getBoardStyleSheet}}
     <link rel="stylesheet" href="/stylesheets/{{getBoardStyleSheet}}.css">
     {{/if}}
+    {{#if loginStyleSheet}}
+    <link rel="stylesheet" href="/stylesheets/{{loginStyleSheet}}.css"
+    {{/if}}
     
 </head>
 
 <body>
   <div>{{{body}}}</div>
+
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-login.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
+<script>
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
     
