update backgrounds and clean us styling

--- a/public/stylesheets/getboardstyle.css
+++ b/public/stylesheets/getboardstyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./images/blackcorkboard.jpg');
+    background-image: url('./images/blackcorkboard2.jpg');
     background-repeat: no-repeat;
     background-position-y: -75px;
     background-position-x: center;
