--- a/public/stylesheets/giveboardstyle.css
+++ b/public/stylesheets/giveboardstyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./images/whitecorkboard.jpg');
+    background-image: url('./images/whitecorkboard2.jpg');
     background-repeat: no-repeat;
     background-position-y: -75px;
     background-position-x: center;
