--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 /* class = . id = # */
 
 body {
-    background-image: url('./images/yinyanghor.png');
+    background-image: url('./images/yinyanghornodots.png');
     background-repeat: no-repeat;
     background-position-y: -75px;
     background-position-x: center;
@@ -37,6 +37,7 @@ h1 {
     margin-left: -4px;
     width: 100%;
     height: 110px;
+    padding-top: 25px;
 }
 
 #getbtn {
@@ -45,7 +46,9 @@ h1 {
     width: 100%;
     height: 110px;
     border: none;
+    padding-top: 40px;
 }
+
 
 header nav {
     margin: 20px 0;
