--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,3 +98,21 @@ header nav {
             text-decoration: none;
             color: white;
         }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-position-y: 100px;
+        background-position-x: -70px;
+    }
+    
+    h1 {
+        font-size: 80px;
+        margin-left: 250px;
+    }
+}
+
+@media only screen and (max-width: 1550px) {
+    header nav ul li a {
+        padding: 40px
+    }
+}
