--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -13,12 +13,12 @@
                 <a href="/getboard" id="getnav">Get Help Board</a>
             </li>
             <li id="login-logout">
-                <!-- will have handlebar logic to handle sessions -->
-                <!-- {{#if loggedIn}} -->
-                <!-- <button class="btn btn-light">logout</button> -->
-                <!-- {{else}} -->
-                <a href="/login">sign up or log in</a>
-                <!-- {{/if}} -->
+                {{#if login}} 
+                    <a href="">Create New Post</a>
+                    <button class="btn btn-light">logout</button>
+                {{else}} 
+                    <a href="/login" id="navlogin">sign up or log in</a>
+                {{/if}}
             </li>
         </ul>
     </nav>
