--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,11 +12,12 @@
                 </li>
                 <li id="login-logout">
                     <!-- will have handlebar logic to handle sessions -->
-                    <!-- {{#if loggedIn}} -->
-                    <button class="btn btn-light">logout</button>
-                    <!-- {{else}} -->
-                    <a href="/login" id="navlogin">sign up or log in</a>
-                    <!-- {{/if}} -->
+                   {{#if login}} 
+                        <a href="">Create New Post</a>
+                        <button class="btn btn-light">logout</button>
+                    {{else}} 
+                        <a href="/login" id="navlogin">sign up or log in</a>
+                   {{/if}}
                 </li>
             </ul>
         </nav>
