added cookie handling per session for login and logout

--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -12,7 +12,7 @@
                 <a href="/getboard" id="getnav">Get Help Board</a>
             </li>
             <li id="login-logout">
-                {{#if login}}
+                {{#if loggedIn}}
                 <a href="">Create New Post</a>
                 <button class="btn btn-light">logout</button>
                 {{else}}
