--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -13,12 +13,13 @@
                 <a href="/getboard" id="getnav">Get Help Board</a>
             </li>
             <li id="login-logout">
-                <!-- will have handlebar logic to handle sessions -->
-                <!-- {{#if loggedIn}} -->
-                <!-- <button class="btn btn-light">logout</button> -->
-                <!-- {{else}} -->
-                <a href="/login">sign up or log in</a>
-                <!-- {{/if}} -->
+                   {{#if loggedIn}}
+                <a href="">Create New Post</a>
+                <button class="btn btn-light">logout</button>
+                {{else}}
+                <a href="/login" id="navlogin">sign up or log in</a>
+
+                {{/if}}
             </li>
         </ul>
     </nav>
@@ -27,3 +28,40 @@
     <h1>Give Help Board</h1>
 </div>
 {{!-- posts --}}
+
+{{!-- this is testing area only and can be deleted, anything above has not been touched ---------------------}}
+{{!-- this is input area first, you can move it where you like, design it or make it for each post--}}
+
+<section>
+  <h2>Create New Post</h2>
+
+  <form class ="post-btn">
+    <div>
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" />
+    </div>
+    <div>
+      <label for="content">Post</label>
+      <input id="content" name="content" />
+    </div>
+    <button type="submit">Create</button>
+  </form>
+</section>
+
+<section>
+<ol>
+  {{!-- check what is this --}}
+  {{#each posts as |post|}}
+  <li>
+    {{> testerpost post }}
+  </li>
+  {{!-- added --}}
+  
+  <div>{{post.content}}</div>
+  <br>
+<br>
+  {{/each}}
+</ol>
+</section>
+
+  <script src="/javascript/add-content.js"></script>
