Choose a board drop down

--- a/views/layouts/editpost.handlebars
+++ b/views/layouts/editpost.handlebars
@@ -1,5 +1,14 @@
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
+  <form >
+  <label>Choose a Board:</label>
+  <select>
+    <option value="1">GetBoard</option>
+    <option value="2">GiveBoard</option>
+  </select>
+  <br><br>
+  <input type="submit" value="Submit">
+  </form>
   <h2>
     Edit Post
   </h2>
