--- a/views/layouts/singlepost.handlebars
+++ b/views/layouts/singlepost.handlebars
@@ -1,6 +1,16 @@
 <section>
   <h2>Create New Post</h2>
 
+  <form >
+  <label>Choose a Board:</label>
+  <select>
+    <option value="1">GetBoard</option>
+    <option value="2">GiveBoard</option>
+  </select>
+  <br><br>
+  <input type="submit" value="Submit">
+  </form>
+  
   <form>
     <div>
       <label for="post-title">Title</label>
