added singlepost for giveboard, render posts on giveboard

--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -31,7 +31,7 @@
     <li>
         <article class="post">
             <div class="title">
-                <a href="/getboard/{{post.id}}" target="_blank">{{post.title}}</a>
+                <a href="/giveboard/{{post.id}}" target="_blank">{{post.title}}</a>
                 <span>{{post.content}}</span>
                 <span>Posted by: {{post.user.first_name}} {{post.user.last_name}}</span>
             </div>
