--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,7 +13,7 @@
             <li id="login-logout">
                 <!-- will have handlebar logic to handle sessions -->
                 {{#if loggedIn}}
-                <a href="/">Create New Post</a>
+                <a href="/" id="create-new">Create New Post</a>
                 <button class="btn btn-light" id="logoutBtn">logout</button>
                 {{else}}
                 <a href="/login" id="navlogin">sign up or log in</a>
