--- a/public/stylesheets/getboardstyle.css
+++ b/public/stylesheets/getboardstyle.css
@@ -52,3 +52,22 @@ h1 {
     justify-content: center;
     color: white;
 }
+
+.post {
+    /* display: flex;
+    flex-direction: column; */
+    background-color: white;
+    padding-bottom: 20px;
+    margin-right: 100px;
+    margin-top: 50px;
+    /* justify-content: center; */
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 3%;
+    /* justify-content: center; */
+    /* margin-left: 700px; */
+}
