--- a/views/getboard.handlebars
+++ b/views/getboard.handlebars
@@ -27,10 +27,11 @@
     <h1>Get Help Board</h1>
 </div>
 {{!-- posts --}}
-<ol class="post-list" style="color: orange">
+<ol>
     {{#each posts as |post|}}
     <li>
         <article class="post">
+            <img src="/stylesheets/images/pngjoy.com_thumb-tack-board-pin-icon-png-png-download_10162438.png" alt="thumb-tack">
             <div class="title">
                 <a href="/getboard/{{post.id}}" target="_blank">{{post.title}}</a>
                 <span>{{post.content}}</span>
