--- a/public/stylesheets/giveboardstyle.css
+++ b/public/stylesheets/giveboardstyle.css
@@ -51,3 +51,22 @@ h1 {
     display: flex;
     justify-content: center;
 }
+
+.post {
+    background-color: white;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    margin-right: 100px;
+    margin-top: 50px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 3%;
+}
+
+li {
+    list-style: none;
+}
