--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,6 +38,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script> --}}
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    <script src="/javascript/homepage.js"></script>
     {{/if}}
     {{!--
     <script>
