--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -13,8 +13,8 @@
             </li>
             <li id="login-logout">
                 {{#if loggedIn}}
-                <a href="">Create New Post</a>
-                <button class="btn btn-light">logout</button>
+                <a href="" id="create-new">Create New Post</a>
+                <button class="btn btn-light" id="logoutBtn">logout</button>
                 {{else}}
                 <a href="/login" id="navlogin">sign up or log in</a>
                 {{/if}}
@@ -47,3 +47,6 @@
     </li>
     {{/each}}
 </ol>
+{{#if loggedIn}}
+<script src="/javascript/homepage.js"></script>
+{{/if}}
