--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -31,6 +31,13 @@
 
 </section>
 
+{{#if loggedIn}}
+<section>
+  <button type="button" id="editBtn">Edit Post</button>
+  <button type="button" id="deleteBtn">Delete Post</button>
+</section>
+{{/if}}
+
 {{#if post.comments.length}}
 <section>
   <h2>Comments</h2>
@@ -39,3 +46,6 @@
   {{/each}}
 </section>
 {{/if}}
+
+<script src="/javascript/single-post.js"></script>
+<script src="/javascript/homepage.js"></script>
