--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,44 +1,38 @@
+<header>
+  <nav class="topnav" id="myTopnav">
+    <ul>
+      <li>
+        <a href="/"><u>Home</u></a>
+      </li>
+      <li>
+        <a href="/giveboard" id="givenav">Give Help Board</a>
+      </li>
+      <li>
+        <a href="/getboard" id="getnav">Get Help Board</a>
+      </li>
+      <li id="login-logout">
+        <!-- will have handlebar logic to handle sessions -->
+        {{#if loggedIn}}
+        <a href="/" id="create-new">Create New Post</a>
+        <button class="btn btn-light" id="logoutBtn">logout</button>
+        {{else}}
+        <a href="/login" id="navlogin">sign up or log in</a>
+        {{/if}}
+      </li>
+    </ul>
+  </nav>
+</header>
+
 <article>
-  <a href="/dashboard"> &larr; Back to dashboard</a>
-  {{!-- <form>
-    <label>Choose a Board:</label>
-    {{!-- <select>
-      <option value="1">GetBoard</option>
-      <option value="2">GiveBoard</option>
-    </select> --}}
+  <form id="edit-post-form">
+    <label for="post-title">Post Title:</label>
+    <input name="post-title" type="text" id="post-title">
+    <label for="post-content">Post Content:</label>
+    <textarea name="post-content" type="text" id="post-content"></textarea>
     <br><br>
-    {{!-- <input type="submit" value="Submit"> --}}
-  </form> --}}
-  <h2>
-    Edit Post
-  </h2>
-  <form class="edit-post">
-    {{!-- <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
-    </div>
-    <div> --}}
-      {{!-- {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-      |
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div> --}}
-    <button type="submit">Save post</button>
-    <button type="button" class="btn btn-light">Delete post</button>
+    <button type="submit">Edit</button>
   </form>
 </article>
-
-<form class="">
-  <div>
-    <textarea name="post-title"></textarea>
-  </div>
-
-  {{!-- <div>
-    <button type="submit">add comment</button>
-  </div> --}}
-</form>
-
 {{!-- {{> comments post.comments}} --}}
 
-<script src="public/javascript/editpost.js"></script>
-<script src="/models/post.js"></script>
-<script src="/models/comment.js"></script>
+<script src="/javascript/editpost.js"></script>
