--- a/public/stylesheets/giveboardstyle.css
+++ b/public/stylesheets/giveboardstyle.css
@@ -70,3 +70,24 @@ img {
 li {
     list-style: none;
 }
+
+#create-post {
+    padding: 100px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.spacing {
+    padding: 15px;
+    margin: 10px;
+}
+
+#post-content {
+    padding: 100px;
+}
+
+#post-content-label {
+    position: relative;
+    top: -270px;
+}
