--- a/views/giveboard.handlebars
+++ b/views/giveboard.handlebars
@@ -14,8 +14,8 @@
             </li>
             <li id="login-logout">
                    {{#if loggedIn}}
-                <a href="">Create New Post</a>
-                <button class="btn btn-light">logout</button>
+                <a href="/dashboard">Create New Post</a>
+                <button class="btn btn-light" id="logout">logout</button>
                 {{else}}
                 <a href="/login" id="navlogin">sign up or log in</a>
 
@@ -32,36 +32,20 @@
 {{!-- this is testing area only and can be deleted, anything above has not been touched ---------------------}}
 {{!-- this is input area first, you can move it where you like, design it or make it for each post--}}
 
-<section>
-  <h2>Create New Post</h2>
-
-  <form class ="post-btn">
-    <div>
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title" />
-    </div>
-    <div>
-      <label for="content">Post</label>
-      <input id="content" name="content" />
-    </div>
-    <button type="submit">Create</button>
-  </form>
-</section>
-
-<section>
-<ol>
-  {{!-- check what is this --}}
-  {{#each posts as |post|}}
+  {{!-- check if logged in is needed --}}
+  {{#each dbPostData as |post|}}
   <li>
-    {{> testerpost post }}
+    
   </li>
   {{!-- added --}}
-  
-  <div>{{post.content}}</div>
+  <div>{{post.dataValues.title}}</div>
+  <div>{{post.dataValues.content}}</div>
+  <div>{{post.dataValues.createdAt}}</div>
   <br>
 <br>
   {{/each}}
 </ol>
 </section>
 
-  <script src="/javascript/add-content.js"></script>
+
+  
