--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,29 +21,48 @@
 
 </head>
 
-{{!--
 
-<body>
-  <div>{{{body}}}</div>
-  {{#if loginStyleSheet}}
-  <link rel="stylesheet" href="/stylesheets/{{loginStyleSheet}}.css" {{/if}} </head> --}}
 
   <body>
+
+ {{!-- <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-login.js"></script> --}}
+
+
+
     <div>{{{body}}}</div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-login.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
+
+  
       {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
-    
-    {{!--
-    <script>
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script> --}}
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAcbrpyTs-25J8Gq8a1tHnx1UNlQ1GgLmQ",
+    authDomain: "get-help-give-help-96893.firebaseapp.com",
+    projectId: "get-help-give-help-96893",
+    storageBucket: "get-help-give-help-96893.appspot.com",
+    messagingSenderId: "493787477490",
+    appId: "1:493787477490:web:a56c9897a83ec872c8276b",
+    measurementId: "G-B7TRKYVV4N"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>  
+
+
+
+
   </body>
 
 </html>
