--- a/public/stylesheets/getboardstyle.css
+++ b/public/stylesheets/getboardstyle.css
@@ -5,6 +5,7 @@ body {
     background-position-x: center;
     background-size: 1800px;
     background-color: rgb(37, 37, 37);
+    color: white;
 }
 
 header nav {
@@ -70,4 +71,31 @@ img {
     margin-left: auto;
     margin-right: auto;
     width: 3%;
+}
+
+#create-post {
+    padding: 100px;
+    font-size: 30px;
+}
+
+.spacing {
+    padding: 15px;
+    margin: 10px;
+}
+
+#post-content {
+    padding: 100px;
+}
+
+#post-content-label {
+    position: relative;
+    top: -270px;
+}
+
+.bigger-font {
+    font-size: 30px;
+}
+
+.more-spacing {
+    padding: 50px;
 }
