--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -23,16 +23,21 @@
   </nav>
 </header>
 
-<article>
-  <form id="edit-post-form">
-    <label for="post-title">Post Title:</label>
-    <input name="post-title" type="text" id="post-title">
-    <label for="post-content">Post Content:</label>
-    <textarea name="post-content" type="text" id="post-content"></textarea>
-    <br><br>
-    <button type="submit">Edit</button>
-  </form>
-</article>
+<div id="edit-post">
+  <article id="create-post">
+    <form id="edit-post-form">
+      <div class="spacing">
+        <label for="post-title" >Post Title:</label>
+        <input name="post-title" type="text" id="post-title">
+      </div>
+      <div class="spacing">
+        <label for="post-content" id="post-content-label">Post Content:</label>
+        <textarea name="post-content" type="text" id="post-content"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary spacing">Edit</button>
+    </form>
+  </article>
+</div>
 {{!-- {{> comments post.comments}} --}}
 
 <script src="/javascript/editpost.js"></script>
